<?xml version="1.0"?>
<package>

  <name>nautonomous_msgs_authentication</name>
  <version>0.0.1</version>
  <description>The nautonomous_msgs_authentication package</description>

  <maintainer email="killian.tessel@waternet.nl">Kilian Tessel</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nautonomous_authentication_msgs</build_depend>
  <build_depend>libssl-dev</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nautonomous_authentication_msgs</run_depend>

</package>